# RayTracer

./: .clang-format  CMakeLists.txt  CMakeSettings.json  vcpkg.json
res/models/: box.blend  box.blend1  box.fbx  box.glb  couch_family_3seats _recamiere.blend  cube.fbx  town_hall.glb  town_hall_interior.blend  town_hall_interior.blend1
res/shaders/: ClosestHit.slang  Common.slang  Miss.slang  RayGen.slang
src/: CMakeLists.txt  Minimal.h  ThreadPool.cpp  ThreadPool.h  main.cpp
src/cpu/: CMakeLists.txt  CPURenderer.cpp  CPURenderer.h  CPUScene.cpp  CPUScene.h
src/gpu/: CMakeLists.txt  GPURenderer.cpp  GPURenderer.h  GPUScene.cpp  GPUScene.h  Renderer.cpp  Renderer.h
src/metal/: CMakeLists.txt  Compute.metal  MetalRenderer.cpp  MetalRenderer.h  MetalRenderer.mm  MetalScene.cpp  MetalScene.h  MetalScene.mm
src/scene/: AABB.h  BVH.cpp  BVH.h  CMakeLists.txt  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/util/: BRDF.cpp  BRDF.h  CMakeLists.txt  Camera.h  Material.cpp  Material.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Ray.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
src/window/: CMakeLists.txt  Window.cpp  Window.h
